--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     box-sizing: border-box;
     margin: 0; 
     padding: 0;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 html,
@@ -146,7 +146,7 @@ body {
   }
   
   input:focus + .slider__switch {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px var(--dark-cards-bg);
   }
   
   input:checked + .slider__switch:before {
@@ -188,19 +188,78 @@ body {
   justify-content: space-between;
   width: 70%; 
   height: 90%;
-  border: 1px solid gold;
+ 
+  
 }
 
-.first-card, .second-card, .third-card, .forth-card{
+.first-card, 
+.second-card, 
+.third-card, 
+.forth-card{
   width: 20%;
-  background-color: var(--dark-cards-bg);
+  background-color: var(--light-cards-bg);
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
+  border-radius: 0.5rem;
 }
+
+.first-card .top-border, 
+.second-card .top-border,
+.third-card .top-border,
+.forth-card .top-border{
+  background: hsl(195, 100%, 50%);
+  width: 100%; 
+  padding: 0;
+  margin:0; 
+  z-index: 3; 
+  border-radius: 0.5rem 0.5rem 0 0;
+  padding: 0.15rem;
+  position: sticky;
+}
+.third-card .top-border{
+  background: linear-gradient(to top left,hsl(37, 97%, 70%), hsl(329, 70%, 58%)) !important;
+} 
+
+.forth-card .top-border{
+  background: hsl(348, 97%, 39%) ;
+}
+
 
 
 /*////////////////////////////////
 //      End  Root__Card-One
 ////////////////////////////////*/
+
+/*////////////////////////////////
+//      Start Root__Sub-Title
+////////////////////////////////*/
+.sub-title{
+  position: absolute;
+  top: 43%;
+  width: 100%;
+  height: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: transparent; 
+}
+
+.wrapper__sub-title{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 70%; 
+  height: 100%;
+}
+.wrapper__sub-title h2{
+  color: var(--dark-white-text-color); 
+  font-size: 1.2rem;
+}
+
+/*////////////////////////////////
+//      End  Root__Sub-Title
+////////////////////////////////*/
+
+
