--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   display:flex;
   justify-content: center;
   width: 100%; 
-  height:30%;
+  height:25%;
   padding-top: 2rem;
   border-radius: 0 0 1rem 1rem;
 }
@@ -187,9 +187,7 @@ body {
   display: flex;
   justify-content: space-between;
   width: 70%; 
-  height: 90%;
- 
-  
+  height: 70%;  
 }
 
 .first-card, 
@@ -197,7 +195,8 @@ body {
 .third-card, 
 .forth-card{
   width: 20%;
-  background-color: var(--light-cards-bg);
+  background-color: var(--dark-cards-bg);
+  color: var(--dark-white-text-color);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -221,11 +220,52 @@ body {
 .third-card .top-border{
   background: linear-gradient(to top left,hsl(37, 97%, 70%), hsl(329, 70%, 58%)) !important;
 } 
-
 .forth-card .top-border{
   background: hsl(348, 97%, 39%) ;
 }
 
+.card-top p{
+  font-size: 0.8rem;
+  color: var(--dark-cards-text);
+  
+}
+.card-top p i{
+  color: hsl(195, 100%, 50%);
+  padding-right: 0.3em;
+}
+
+.third-card .card-top  .icon-gradient{  
+  background: -webkit-gradient(linear, left top, left bottom, from(hsl(37, 97%, 70%)), to(hsl(329, 70%, 58%)));
+  padding-right: 0.3em;
+  -webkit-background-clip: text;
+ -webkit-text-fill-color: transparent;
+}
+
+.forth-card .card-top  p i{
+  color:  hsl(348, 97%, 39%) ;
+  padding-right: 0.3em;
+}
+
+.card-middle h3{
+  font-size: 2.8rem;
+  text-align: center;
+}
+.card-middle p{
+  font-size: 0.8rem;
+  color: var(--dark-cards-text);
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+}
+
+.card-bottom p{
+  font-size: 0.8rem;
+  color: hsl(146, 68%, 55%);
+  
+}
+.card-bottom p i{
+  color: hsl(146, 68%, 55%);
+  padding-right: 0.3em;
+}
 
 
 /*////////////////////////////////
