--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-
-:root{
+:root {
   /*Dark Theme*/
-    --dark-blue-bg: hsl(230, 17%, 14%);
-    --dark-blue-header-bg: hsl(232, 19%, 15%);
-    --dark-cards-bg: hsl(228, 28%, 20%);
-    --dark-cards-text: hsl(228, 34%, 66%);
-    --dark-white-text-color: hsl(0, 0%, 100%);
+  --dark-blue-bg: hsl(230, 17%, 14%);
+  --dark-blue-header-bg: hsl(232, 19%, 15%);
+  --dark-cards-bg: hsl(228, 28%, 20%);
+  --dark-cards-text: hsl(228, 34%, 66%);
+  --dark-white-text-color: hsl(0, 0%, 100%);
 
   /*Light Theme*/
   --light-bg: hsl(0, 0%, 100%);
@@ -17,11 +16,13 @@
   --light-white-text-color: hsl(230, 17%, 14%);
 }
 
-*, *::before, *::after{
-    box-sizing: border-box;
-    margin: 0; 
-    padding: 0;
-    /* border: 1px solid red; */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* border: 1px solid red; */
 }
 
 html,
@@ -33,7 +34,7 @@ body {
 }
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   background: var(--dark-blue-bg);
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -49,10 +50,10 @@ body {
   overflow-y: hidden !important;
   overflow-x: hidden !important;
   width: 100%;
-  height: 100%;
+  max-height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -60,18 +61,18 @@ body {
 //    Start Root__Header
 ////////////////////////////////*/
 
-.header{
-  font-family: 'Inter', sans-serif;
-  background: var(--dark-blue-header-bg); 
-  display:flex;
+.header {
+  font-family: "Inter", sans-serif;
+  background: var(--dark-blue-header-bg);
+  display: flex;
   justify-content: center;
-  width: 100%; 
-  height:25%;
+  width: 100%;
+  height: 25%;
   padding-top: 2rem;
   border-radius: 0 0 1rem 1rem;
 }
 
-.header-container{
+.header-container {
   width: 70%;
   height: 100%;
   margin: auto;
@@ -79,90 +80,95 @@ body {
   justify-content: space-between;
 }
 
-
-.title__header-container h1{
+.title__header-container h1 {
   font-size: 1.4rem;
-    color: var(--dark-white-text-color);
+  color: var(--dark-white-text-color);
 }
-.title__header-container p{
+.title__header-container p {
   font-size: 0.8rem;
   color: var(--dark-cards-text);
   margin-top: 0.3rem;
 }
 
-.toggle__header-container{
+.toggle__header-container {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   margin-top: 1rem;
-  
 }
-.toggle__header-container p{
+.toggle__header-container p {
   font-size: 0.8rem;
   color: var(--dark-cards-text);
   margin: 0.5rem 0.5rem;
-  
 }
 
 .switch__header-container {
-    position: relative;
-    display: inline-block;
-    width: 4rem;
-    height: 1.8rem;
-  }
-  
-  .switch__header-container input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .slider__switch {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(to top left,  hsl(146, 68%, 55%), hsl(210, 78%, 56%)) !important;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider__switch:before {
-    position: absolute;
-    content: "";
-    height: 1.3rem;
-    width: 1.3rem;
-    left: 4px;
-    bottom: 4px;
-    background-color: var(--dark-cards-bg);
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider__switch {
-    background:  linear-gradient(to top left, hsl(230, 22%, 74%), hsl(0, 0%, 96%)) !important;;
-  }
-  
-  input:focus + .slider__switch {
-    box-shadow: 0 0 1px var(--dark-cards-bg);
-  }
-  
-  input:checked + .slider__switch:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-   
-  /* Rounded sliders */
-  .slider__switch.round__switch {
-    border-radius: 2rem;
-  }
-  
-  .slider__switch.round__switch:before {
-    border-radius: 50%;
-  } 
+  position: relative;
+  display: inline-block;
+  width: 4rem;
+  height: 1.8rem;
+}
+
+.switch__header-container input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider__switch {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    to top left,
+    hsl(146, 68%, 55%),
+    hsl(210, 78%, 56%)
+  ) !important;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider__switch:before {
+  position: absolute;
+  content: "";
+  height: 1.3rem;
+  width: 1.3rem;
+  left: 4px;
+  bottom: 4px;
+  background-color: var(--dark-cards-bg);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider__switch {
+  background: linear-gradient(
+    to top left,
+    hsl(230, 22%, 74%),
+    hsl(0, 0%, 96%)
+  ) !important;
+}
+
+input:focus + .slider__switch {
+  box-shadow: 0 0 1px var(--dark-cards-bg);
+}
+
+input:checked + .slider__switch:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider__switch.round__switch {
+  border-radius: 2rem;
+}
+
+.slider__switch.round__switch:before {
+  border-radius: 50%;
+}
 
 /*////////////////////////////////
 //      END  Root__Header
@@ -172,7 +178,7 @@ body {
 //      Start Root__Card-One
 ////////////////////////////////*/
 
-.cards-one{
+.cards-one {
   position: absolute;
   top: 13%;
   width: 100%;
@@ -180,21 +186,21 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: transparent;    
+  background: transparent;
 }
 
-.card-container{
+.card-container {
   display: flex;
   justify-content: space-between;
-  width: 70%; 
-  height: 70%;  
+  width: 70%;
+  height: 70%;
 }
 
-.first-card, 
-.second-card, 
-.third-card, 
-.forth-card{
-  width: 20%;
+.first-card,
+.second-card,
+.third-card,
+.fourth-card {
+  width: 22%;
   background-color: var(--dark-cards-bg);
   color: var(--dark-white-text-color);
   display: flex;
@@ -204,75 +210,84 @@ body {
   border-radius: 0.5rem;
 }
 
-.first-card .top-border, 
+.first-card .top-border,
 .second-card .top-border,
 .third-card .top-border,
-.forth-card .top-border{
+.fourth-card .top-border {
   background: hsl(195, 100%, 50%);
-  width: 100%; 
+  width: 100%;
   padding: 0;
-  margin:0; 
-  z-index: 3; 
+  margin: 0;
+  z-index: 3;
   border-radius: 0.5rem 0.5rem 0 0;
   padding: 0.15rem;
   position: sticky;
 }
-.third-card .top-border{
-  background: linear-gradient(to top left,hsl(37, 97%, 70%), hsl(329, 70%, 58%)) !important;
-} 
-.forth-card .top-border{
-  background: hsl(348, 97%, 39%) ;
+.second-card .top-border {
+  background: hsl(203, 89%, 53%);
 }
 
-.card-top p{
+.third-card .top-border {
+  background: linear-gradient(
+    to top left,
+    hsl(37, 97%, 70%),
+    hsl(329, 70%, 58%)
+  ) !important;
+}
+.fourth-card .top-border {
+  background: hsl(348, 97%, 39%);
+}
+
+.card-top p {
   font-size: 0.8rem;
   color: var(--dark-cards-text);
-  
-}
-.card-top p i{
-  color: hsl(195, 100%, 50%);
-  padding-right: 0.3em;
 }
 
-.third-card .card-top  .icon-gradient{  
-  background: -webkit-gradient(linear, left top, left bottom, from(hsl(37, 97%, 70%)), to(hsl(329, 70%, 58%)));
+.third-card .card-top .icon-gradient,
+.instagram .icon-gradient {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(hsl(37, 97%, 70%)),
+    to(hsl(329, 70%, 58%))
+  );
   padding-right: 0.3em;
   -webkit-background-clip: text;
- -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent;
 }
 
-.forth-card .card-top  p i{
-  color:  hsl(348, 97%, 39%) ;
+.fourth-card .card-top p i {
+  color: hsl(348, 97%, 39%);
   padding-right: 0.3em;
 }
 
-.card-middle h3{
+.card-middle h3 {
   font-size: 2.8rem;
   text-align: center;
 }
-.card-middle p{
+.card-middle p {
   font-size: 0.8rem;
   color: var(--dark-cards-text);
   letter-spacing: 0.2rem;
   text-transform: uppercase;
 }
 
-.card-bottom p{
+.card-bottom p {
   font-size: 0.8rem;
   color: hsl(146, 68%, 55%);
-  
 }
-.card-bottom p i{
+.card-bottom p i,
+.bottom__cards-two p i {
   color: hsl(146, 68%, 55%);
   padding-right: 0.3em;
 }
 
-.forth-card .card-bottom p, .forth-card .card-bottom p i {
+.fourth-card .card-bottom p,
+.fourth-card .card-bottom p i {
   color: hsl(348, 67%, 46%);
   padding-right: 0.3em;
 }
-
-
 
 /*////////////////////////////////
 //      End  Root__Card-One
@@ -281,7 +296,7 @@ body {
 /*////////////////////////////////
 //      Start Root__Sub-Title
 ////////////////////////////////*/
-.sub-title{
+.sub-title {
   position: absolute;
   top: 43%;
   width: 100%;
@@ -289,18 +304,18 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: transparent; 
+  background: transparent;
 }
 
-.wrapper__sub-title{
+.wrapper__sub-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 70%; 
+  width: 70%;
   height: 100%;
 }
-.wrapper__sub-title h2{
-  color: var(--dark-white-text-color); 
+.wrapper__sub-title h2 {
+  color: var(--dark-white-text-color);
   font-size: 1.2rem;
 }
 
@@ -308,4 +323,114 @@ body {
 //      End  Root__Sub-Title
 ////////////////////////////////*/
 
+/*////////////////////////////////
+//     Start  Root__Cards-Two
+////////////////////////////////*/
+.cards-two {
+  position: absolute;
+  top: 48%;
+  width: 100%;
+  height: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+}
+.card-container__cards-two {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 70%;
+  height: 95%;
+  align-items: center;
+}
+.row-one,
+.row-two {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem;
+}
+.card-one__cards-two,
+.card-two__cards-two,
+.card-three__cards-two,
+.card-four__cards-two {
+  width: 23%;
+  background: var(--dark-cards-bg);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 2rem;
+  border-radius: 0.5rem;
+}
+.top__cards-two,
+.bottom__cards-two {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.top__cards-two {
+  margin-bottom: 3rem;
+}
 
+.top__cards-two p {
+  font-size: 0.9rem;
+  color: var(--dark-cards-text);
+  margin-top: 0.3rem;
+}
+
+.down-caret,
+.down-caret i {
+  color: hsl(348, 67%, 46%) !important;
+  padding-right: 0.3em;
+  font-size: 0.8rem;
+}
+
+.up-caret,
+.up-caret i {
+  color: hsl(146, 68%, 55%) !important;
+  padding-right: 0.3em;
+  font-size: 0.8rem;
+}
+
+.instagram .icon-gradient {
+  font-size: 1.3rem;
+}
+
+.youtube i {
+  color: hsl(348, 97%, 39%);
+  font-size: 1.2rem;
+}
+.twitter i {
+  color: hsl(203, 89%, 53%);
+  font-size: 1.3rem;
+}
+
+.facebook i {
+  color: hsl(195, 100%, 50%);
+  font-size: 1.3rem;
+  padding-right: 0.3em;
+}
+
+.bottom__cards-two h4 {
+  color: var(--dark-white-text-color);
+  font-size: 2rem;
+}
+/* .card-bottom p i,
+.bottom__cards-two p i {
+  color: hsl(146, 68%, 55%);
+  padding-right: 0.3em;
+} */
+
+/* .fourth-card .card-bottom p,
+.fourth-card .card-bottom p i {
+  color: hsl(348, 67%, 46%);
+  padding-right: 0.3em;
+} */
+
+/*////////////////////////////////
+//     End  Root__Cards-Two
+////////////////////////////////*/
