Finished the js and css light-darkmode with localStorage

--- a/style.css
+++ b/style.css
@@ -8,12 +8,28 @@
   --dark-cards-text: hsl(228, 34%, 66%);
   --dark-white-text-color: hsl(0, 0%, 100%);
 
+  --foreground: var(--dark-white-text-color);
+  --background: var(--dark-blue-bg);
+  --header-bg: var(--dark-blue-header-bg);
+  --cards-bg: var(--dark-cards-bg);
+  --cards-text: var(--dark-cards-text);
+  --cards-text-two: var(--dark-white-text-color);
+}
+
+.lightMode {
   /*Light Theme*/
   --light-bg: hsl(0, 0%, 100%);
   --light-pale-blue-header-bg: hsl(225, 100%, 98%);
   --light-cards-bg: hsl(227, 47%, 96%);
   --light-cards-text: hsl(228, 12%, 44%);
   --light-white-text-color: hsl(230, 17%, 14%);
+
+  --foreground: var(--light-white-text-color);
+  --background: var(--light-bg);
+  --header-bg: var(--light-pale-blue-header-bg);
+  --cards-bg: var(--light-cards-bg);
+  --cards-text: var(--light-cards-text);
+  --cards-text-two: var(--light-white-text-color);
 }
 
 *,
@@ -35,7 +51,8 @@ body {
 
 body {
   font-family: "Inter", sans-serif;
-  background: var(--dark-blue-bg);
+  background: var(--background);
+  color: var(--foreground);
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -63,7 +80,7 @@ body {
 
 .header {
   font-family: "Inter", sans-serif;
-  background: var(--dark-blue-header-bg);
+  background: var(--header-bg);
   display: flex;
   justify-content: center;
   width: 100%;
@@ -82,11 +99,11 @@ body {
 
 .title__header-container h1 {
   font-size: 1.4rem;
-  color: var(--dark-white-text-color);
+  color: var(--foreground);
 }
 .title__header-container p {
   font-size: 0.8rem;
-  color: var(--dark-cards-text);
+  color: var(--cards-text);
   margin-top: 0.3rem;
 }
 
@@ -98,7 +115,7 @@ body {
 }
 .toggle__header-container p {
   font-size: 0.8rem;
-  color: var(--dark-cards-text);
+  color: var(--cards-text);
   margin: 0.5rem 0.5rem;
 }
 
@@ -138,7 +155,7 @@ body {
   width: 1.3rem;
   left: 4px;
   bottom: 4px;
-  background-color: var(--dark-cards-bg);
+  background-color: var(--cards-bg);
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -146,13 +163,13 @@ body {
 input:checked + .slider__switch {
   background: linear-gradient(
     to top left,
-    hsl(230, 22%, 74%),
-    hsl(0, 0%, 96%)
+    hsl(146, 68%, 55%),
+    hsl(210, 78%, 56%)
   ) !important;
 }
 
 input:focus + .slider__switch {
-  box-shadow: 0 0 1px var(--dark-cards-bg);
+  box-shadow: 0 0 1px var(--cards-bg);
 }
 
 input:checked + .slider__switch:before {
@@ -201,8 +218,8 @@ input:checked + .slider__switch:before {
 .third-card,
 .fourth-card {
   width: 22%;
-  background-color: var(--dark-cards-bg);
-  color: var(--dark-white-text-color);
+  background-color: var(--cards-bg);
+  color: var(--cards-text-two);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -240,7 +257,7 @@ input:checked + .slider__switch:before {
 
 .card-top p {
   font-size: 0.8rem;
-  color: var(--dark-cards-text);
+  color: var(--cards-text);
 }
 
 .third-card .card-top .icon-gradient,
@@ -268,7 +285,7 @@ input:checked + .slider__switch:before {
 }
 .card-middle p {
   font-size: 0.8rem;
-  color: var(--dark-cards-text);
+  color: var(--cards-text);
   letter-spacing: 0.2rem;
   text-transform: uppercase;
 }
@@ -315,7 +332,7 @@ input:checked + .slider__switch:before {
   height: 100%;
 }
 .wrapper__sub-title h2 {
-  color: var(--dark-white-text-color);
+  color: var(--cards-text-two);
   font-size: 1.2rem;
 }
 
@@ -358,7 +375,7 @@ input:checked + .slider__switch:before {
 .card-three__cards-two,
 .card-four__cards-two {
   width: 23%;
-  background: var(--dark-cards-bg);
+  background: var(--cards-bg);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -378,7 +395,7 @@ input:checked + .slider__switch:before {
 
 .top__cards-two p {
   font-size: 0.9rem;
-  color: var(--dark-cards-text);
+  color: var(--cards-text);
   margin-top: 0.3rem;
 }
 
@@ -416,7 +433,7 @@ input:checked + .slider__switch:before {
 }
 
 .bottom__cards-two h4 {
-  color: var(--dark-white-text-color);
+  color: var(--cards-text-two);
   font-size: 2rem;
 }
 
